git fix: increase container size to overlap between sections

--- a/portfolio/src/components/ProjectsThree/ProjectsThree.module.css
+++ b/portfolio/src/components/ProjectsThree/ProjectsThree.module.css
@@ -47,6 +47,6 @@
 
 @media screen and (height <= 600px) {
     .container {
-        min-height: 600px;
+        min-height: 800px;
     }
 }
